INREL-5409: fix overflowing confirmation message

--- a/sass/mixins/_mixins.newsletter.scss
+++ b/sass/mixins/_mixins.newsletter.scss
@@ -1,4 +1,5 @@
 @mixin newsletter--default() {
+  position: relative;
   background-color: $newsletter__bg-color;
 
   .newsletter__close {
